<resources>
    <string name="app_name">Ethanol Mix Calculator</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Ethanol Mix Calculator</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used for the main form -->
    <string name="calculate">Calculate</string>
    <string name="ethanol_mix_calculator">Ethanol Mix Calculator</string>
    <string name="tank_size">Tank Size:</string>
    <string name="_0_0">0.0</string>
    <string name="current_fuel">Current Fuel %:</string>
    <string name="current_ethanol_mix">Current Ethanol Mix:</string>
    <string name="_0">0</string>
    <string name="pump_gas_ethanol_mix">Pump Gas Ethanol %:</string>
    <string name="pump_e85_ethanol_mix">E85 Ethanol %:</string>
    <string name="desired_ethanol_mix">Desired Ethanol Mix:</string>
</resources>