<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FirstFragment">

    <data>
        <variable
            name="viewModel"
            type="com.nomads.ethanolmixcalculator.FirstFragmentViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:importantForAutofill="noExcludeDescendants">

        <LinearLayout
            android:id="@+id/edit_tank_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:minHeight="48dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/tank_size"
                android:textAlignment="gravity" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/_0_0"
                android:inputType="numberDecimal"
                android:text="@={viewModel.tankVolumeValue}" />

            <!-- TODO these bindings don't work. Need to use an adapter?  or attrChanged-->
            <Spinner
                android:layout_width="104dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:entries="@{viewModel.volumeUomOptions}"
                android:onItemSelected="@{() -> viewModel.onTankSizeUomChanged()}"
                android:selectedItemPosition="@{viewModel.tankVolumeUomPosition}"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_current_fuel_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:minHeight="48dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_tank_size">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/current_fuel"
                android:textAlignment="gravity" />

            <!-- TODO how to use formatter for percentage sign?-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/_0"
                android:inputType="number"
                android:text="@={viewModel.currentFuelPercentage}" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_current_ethanol_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:minHeight="48dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_current_fuel_percentage">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/current_ethanol_mix"
                android:textAlignment="gravity" />

            <!-- TODO how to use formatter for percentage sign?-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/_0"
                android:inputType="number"
                android:text="@={viewModel.currentEthanolPercentage}" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_gas_ethanol_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:minHeight="48dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_current_ethanol_percentage">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/pump_gas_ethanol_mix"
                android:textAlignment="gravity" />

            <!-- TODO how to use formatter for percentage sign?-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/_0"
                android:inputType="number"
                android:text="@={viewModel.gasEthanolPercentage}" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_e85_ethanol_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:minHeight="48dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_gas_ethanol_percentage">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/pump_e85_ethanol_mix"
                android:textAlignment="gravity" />

            <!-- TODO how to use formatter for percentage sign?-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/_0"
                android:inputType="number"
                android:text="@={viewModel.e85EthanolPercentage}" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_target_ethanol_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:minHeight="48dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_e85_ethanol_percentage">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/desired_ethanol_mix"
                android:textAlignment="gravity" />

            <!-- TODO how to use formatter for percentage sign?-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/_0"
                android:inputType="number"
                android:text="@={viewModel.targetEthanolPercentage}" />

        </LinearLayout>

        <TextView
            android:id="@+id/gas_to_add"
            app:layout_constraintTop_toBottomOf="@id/edit_target_ethanol_percentage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@={viewModel.addGasMessage}"
            android:textAlignment="textStart"
            style="@style/TextAppearance.AppCompat.Medium"/>

        <TextView
            android:id="@+id/ethanol_to_add"
            app:layout_constraintTop_toBottomOf="@id/gas_to_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@={viewModel.addE85Message}"
            android:textAlignment="textStart"
            style="@style/TextAppearance.AppCompat.Medium"/>

        <Button
            android:id="@+id/button_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="224dp"
            android:onClick="@{(view) -> viewModel.onCalculateButtonClicked(view)}"
            android:text="@string/calculate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>